# A-maze-ing

./: .gitignore  Makefile  MyREADME.md  README.md  a_maze_ing.py  blueprint.html  config.txt  figure.html  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  test.py
docs/: STEP_BY_STEP_GUIDE.md
src/: a_maze_ing.py  config.py  dispatcher.py  exceptions.py  interfaces.py  main.py  maze.txt  maze_generator.py  maze_solver.py  setup.py  test.py
src/algo/: __init__.py  dfs.py  hooks.py  kruskal.py  prim.py  utils.py  wilson.py
src/hooks/: __init__.py  blocked_area.py  break_perfect.py  pattern_42.py
src/mazegen/: README.md  __init__.py  interfaces.py  maze_generator.py  maze_solver.py
src/mazegen/algo/: dfs.py  kruskal.py  prim.py  wilson.py
src/mazegen/hooks/: __init__.py  blocked_area.py  break_perfect.py  pattern_42.py
src/mazegen/models/: cell.py  maze.py  maze_config.py
src/mazegen/solver/: bfs.py
src/models/: __init__.py  cell.py  cell_models.py  maze.py  maze_config.py  theme.py
src/renderer/: __init__.py  ascii.py
src/solver/: __init__.py  bfs.py
src/utils/: algo.py  cell.py  file.py  maze_config.py  renderer.py  ui.py
tests/: test.py  test_algo_utils.py  test_ascii_renderer.py  test_bfs.py  test_blocked_area.py  test_break_perfect.py  test_cell.py  test_config_settings.py  test_dfs.py  test_exceptions.py  test_interfaces.py  test_kruskal.py  test_maze.py  test_maze_config.py  test_maze_generator.py  test_maze_solver.py  test_pattern_42.py  test_prim.py  test_wilson.py
